--- a/front/index.html
+++ b/front/index.html
@@ -3,10 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./estilos.css">
+    <title>CINEMA-Inicio</title>
   </head>
   <body>
-    <h1>Proyecto de M2</h1>
+    <section class="tituloymenu">
+      <article class="tituloeicono">
+        <img src="./imagenes/icono cine.png" alt="CINEMA" title="CINEMA" class="imgicono">
+        <h1 class="titulocinema">CINEMA</h1>
+      </article>
+      <article class="menuenlaces">
+        <a href="./sobremi.html" class="enlace1" target="_blank">Sobre el creador</a>
+        <a href="./historiadelcine.html" class="enlace2" target="_blank">Historia del cine</a>
+      </article>
+      
+    </section>
+    <section class="contenedor">
+
+    </section>
+    <footer>
+<p> hecho por <strong> NiKiN</strong><br>todos los derechos bien derechos</p>
+    </footer>
 
     <script src="./scripts/tempData.js"></script>
     <script src="./scripts/index.js"></script>
