--- a/front/historiadelcine.html
+++ b/front/historiadelcine.html
@@ -4,10 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./estilos.css">
+    <link rel="stylesheet" href="./estilos2.css">
     <title>CINEMA-Historia del cine</title>
 </head>
 <body>
-    
+    <div class="enlacesobre">
+        <a href="./index.html" class="enlacesobremi">Inicio</a>
+    </div>
+    <section>
+        <article class="tituloeicono">
+            <img src="./imagenes/icono cine.png" alt="CINEMA" title="CINEMA" class="imgicono">
+            <h1 class="titulocinema">CINEMA</h1>
+          </article>
+    <article class="textohistoria">
+        <p class="historia">El origen del cine se remonta a fines del siglo XIX, cuando se creó el cinematógrafo, o sea, la máquina capaz de grabar y reproducir imágenes para crear la sensación del movimiento.
+             Hubo muchos antecedentes a esta invención, que iba de la mano de los primeros pasos formales en la técnica de la fotografía. <br>
+             <br>
+             Quizá el más importante de ellos haya sido el “kinetoscopio” de los estadounidenses William Dickinson (1860-1935) y Thomas Alba Edison (1847-1931),
+              cuyas funciones eran aún muy limitadas, en comparación con el cinematógrafo patentado en 1895 por los famosos hermanos Lumière, Auguste Marie (1862-1954) y Louis Jean (1864-1948), hijos del fotógrafo Antoine Lumière. <br>
+              <br>
+              Fueron ellos quienes, un 28 de diciembre de 1895 en París, llevaron a cabo la primera proyección pública de cine. Consistió en una serie de, por llamarlos de alguna manera, 
+              documentales: tomas de obreros trabajando o de un tren aproximándose a la estación de La Ciotat. <br>
+              <br>
+              Justamente la filmación del tren causó un impacto tan grande en los espectadores, que muchos huyeron despavoridos de la sala. Algún tiempo después, los Lumière fueron también los primeros en
+               hacer ficción cinematográfica, adaptando una tira cómica de Hermann Vogel en dos cortometrajes humorísticos, conocidos hoy como “El regador regado” (L’arroseur arrosé). <br>
+               <br>
+               Inicialmente, estas exhibiciones se llevaban a cabo en sótanos, clubes nocturnos y cafés, con asistencia masiva y no duraban más que unos pocos minutos. Se trataba de un cine aún rudimentario, mudo y en blanco y negro, que
+                acompañaban lecturas, música y mucha participación de la audiencia. <br>
+                <br>
+                Sin embargo, estos humildes inicios demostraron ser sumamente rentables, y una nueva industria surgió a lo largo de los siguientes 30 años, lista para invertir en la producción fílmica, pero también en 
+                la innovación de sus aparatos y materiales. Así nació la industria del cine. <br>
+                <br>
+                Gracias a ello, desde inicios del siglo XX tuvieron lugar los primeros intentos de un cine a color, cuyos primeros resultados formales aparecieron alrededor de 1915. Pero esto no sería algo popular hasta mediados del siglo. <br>
+                <br>
+                En cuanto al sonido, los primeros filmes eran acompañados en cada proyección por músicos en vivo, o a lo sumo con grabaciones musicales que acompañaban la atmósfera del relato. En 1927 apareció en los Estados Unidos el primer largometraje con un diálogo sincronizado, 
+                grabado en un disco aparte con cada carrete de la película, y que debían reproducirse al unísono. Se trató de “El cantante de Jazz” (The Jazz Singer). <br>
+                <br>
+                Conquistados el color y el sonido, en 1930 tuvo lugar la “Edad dorada” del cine. El séptimo arte había llegado para quedarse. <br>
+                <br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+          </p>
+    </article>
+    </section>
+    <footer>
+        <p> hecho por <strong> NiKiN</strong><br>todos los derechos bien derechos</p>
+    </footer>
 </body>
 </html>
