--- a/front/index.html
+++ b/front/index.html
@@ -14,10 +14,9 @@
         <h1 class="titulocinema">CINEMA</h1>
       </article>
       <article class="menuenlaces">
-        <a href="./sobremi.html" class="enlace1" target="_blank">Sobre el creador</a>
-        <a href="./historiadelcine.html" class="enlace2" target="_blank">Historia del cine</a>
+        <a href="./sobremi.html" class="enlace1" >Sobre el creador</a>
+        <a href="./historiadelcine.html" class="enlace2" >Historia del cine</a>
       </article>
-      
     </section>
     <section class="contenedor">
 
