ultimo cambio hw 1

--- a/front/index.html
+++ b/front/index.html
@@ -8,21 +8,25 @@
     <title>CINEMA-Inicio</title>
   </head>
   <body>
-    <section class="tituloymenu">
-      <article class="tituloeicono">
-        <img src="./imagenes/icono cine.png" alt="CINEMA" title="CINEMA" class="imgicono">
-        <h1 class="titulocinema">CINEMA</h1>
-      </article>
-      <article class="menuenlaces">
-        <a href="./sobremi.html" class="enlace1" >Sobre el creador</a>
-        <a href="./historiadelcine.html" class="enlace2" >Historia del cine</a>
-      </article>
-    </section>
-    <section class="contenedor">
+    <main>
+      <section class="tituloymenu">
+        <article class="tituloeicono">
+          <img src="./imagenes/icono cine.png" alt="CINEMA" title="CINEMA" class="imgicono">
+          <h1 class="titulocinema">CINEMA</h1>
+        </article>
+        <article class="menuenlaces">
+          <a href="./sobremi.html" class="enlace1" >Sobre el creador</a>
+          <a href="./historiadelcine.html" class="enlace2" >Historia del cine</a>
+        </article>
+      </section>
+      <section class="contenedor">
+  
+      </section>
 
-    </section>
+    </main>
+    
     <footer>
-<p> hecho por <strong> NiKiN</strong><br>todos los derechos bien derechos</p>
+<p class="pie"> hecho por <strong> NiKiN</strong><br>todos los derechos bien derechos</pclas>
     </footer>
 
     <script src="./scripts/tempData.js"></script>
