--- a/front/historiadelcine.html
+++ b/front/historiadelcine.html
@@ -51,7 +51,7 @@
    
     
     <footer >
-        <p class="pie"> hecho por <strong> NiKiN</strong><br>todos los derechos bien derechos</p>
+        <p class="pie"> hecho por <strong> NiKiN</strong><br> &copy; todos los derechos bien derechos</p>
     </footer>
 </body>
 </html>
