--- a/front/index.html
+++ b/front/index.html
@@ -26,7 +26,7 @@
     </main>
     
     <footer>
-<p class="pie"> hecho por <strong> NiKiN</strong><br>todos los derechos bien derechos</pclas>
+<p class="pie"> hecho por <strong> NiKiN</strong><br> &copy; todos los derechos bien derechos</pclas>
     </footer>
 
     <script src="./scripts/tempData.js"></script>
