--- a/front/sobremi.html
+++ b/front/sobremi.html
@@ -31,7 +31,7 @@
 
   </main>
     <footer>
-        <p class="pie"> hecho por <strong> NiKiN</strong><br>todos los derechos bien derechos</p>
+        <p class="pie"> hecho por <strong> NiKiN</strong><br> &copy; todos los derechos bien derechos</p>
      </footer>
 </body>
 </html>
