--- a/front/index.html
+++ b/front/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./estilos.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <title>CINEMA-Inicio</title>
   </head>
   <body>
@@ -28,8 +29,6 @@
     <footer>
 <p class="pie"> hecho por <strong> NiKiN</strong><br> &copy; todos los derechos bien derechos</pclas>
     </footer>
-
-    <script src="./scripts/tempData.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
