--- a/front/index.html
+++ b/front/index.html
@@ -5,30 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./estilos.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+   
     <title>CINEMA-Inicio</title>
   </head>
   <body>
-    <main>
-      <section class="tituloymenu">
-        <article class="tituloeicono">
-          <img src="./imagenes/icono cine.png" alt="CINEMA" title="CINEMA" class="imgicono">
-          <h1 class="titulocinema">CINEMA</h1>
-        </article>
-        <article class="menuenlaces">
-          <a href="./sobremi.html" class="enlace1" >Sobre el creador</a>
-          <a href="./historiadelcine.html" class="enlace2" >Historia del cine</a>
-        </article>
-      </section>
-      <section class="contenedor">
-  
-      </section>
 
-    </main>
-    
-    <footer>
-<p class="pie"> hecho por <strong> NiKiN</strong><br> &copy; todos los derechos bien derechos</pclas>
-    </footer>
-    <script src="./scripts/index.js"></script>
+  <div class="cuerpo">
+    <header class="tituloymenu">
+      <article class="backnavegador">
+        <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-link active navegacion" aria-current="page" data-bs-toggle="tab" href="./index.html">Peliculas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link navegacion" href="./sobremi.html">Sobre el creador</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link navegacion" href="./historiadelcine.html">Historia del cine</a>
+          </li> 
+        </ul>
+      </article>
+      
+      <article class="contenedordelcontenedor">
+        <article class="tituloeicono">
+          <img src="./imagenes/camara.png" alt="CINEMA" title="CINEMA" class="imgicono">
+          <h1 class="display-1 titulocinema">CINEMA</h1>
+        </article>   
+    </header>
+  <main>
+    <section class="contenedor">
+
+    </section>
+
+  </main>
+  <footer>
+    <p class="pie"> hecho por <strong> NiKiN</strong><br> &copy; todos los derechos bien derechos</pclas>
+  </footer>
+
+  </div>   
   </body>
+  
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="./scripts/index.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+ 
 </html>
