--- a/front/sobremi.html
+++ b/front/sobremi.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./reset.css"> 
-    <link rel="stylesheet" href="./estilos2.css"> 
+    <link rel="stylesheet" href="./estilos.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> 
     <title>CINEMA-Sobre mi</title>
 </head>
 <body> 
+  <header>
+    <article class="backnavegador">
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link active navegacion" aria-current="page" data-bs-toggle="tab" href="./index.html">Peliculas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link navegacion" href="./historiadelcine.html">Historia del cine</a>
+        </li> 
+      </ul>
+    </article>
+  </header>
   <main>
-    <div class="enlacesobre">
-      <a href="./index.html" class="enlacesobremi">Inicio</a>
-   </div>
+   
       <section>
-          <article class="tituloeicono">
-              <img src="./imagenes/icono cine.png" alt="CINEMA" title="CINEMA" class="imgicono">
-              <h1 class="titulocinema">CINEMA</h1> 
-            </article>
+          
             <article class="imagenytextosobremi">   
               <img src="./imagenes/foto nikin.jpg" alt="creador" class="imgsobremi">
               <p class="textosobremi">Nicolas Mainer nacio el 6 de febrero del año 1990 en Cap.Federal Argentina, a los tres años fue a vivir con su 
@@ -30,8 +38,14 @@
       </section>
 
   </main>
-    <footer>
-        <p class="pie"> hecho por <strong> NiKiN</strong><br> &copy; todos los derechos bien derechos</p>
-     </footer>
+  <footer>
+    <p class="pie"> hecho por <strong> NiKiN</strong><br> &copy; todos los derechos bien derechos</p>
+  </footer>
+ 
 </body>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </html>
