--- a/front/historiadelcine.html
+++ b/front/historiadelcine.html
@@ -20,6 +20,9 @@
             <li class="nav-item">
               <a class="nav-link navegacion" href="./sobremi.html">Sobre el creador</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link navegacion" href="./ingresatupeli.html">Ingresa tu peli</a>
+              </li>
         </article>
   </header>
   <main>
