--- a/front/index.html
+++ b/front/index.html
@@ -24,6 +24,9 @@
           <li class="nav-item">
             <a class="nav-link navegacion" href="./historiadelcine.html">Historia del cine</a>
           </li> 
+          <li class="nav-item">
+            <a class="nav-link navegacion" href="./ingresatupeli.html">Ingresa tu peli</a>
+          </li>
         </ul>
       </article>
     
