--- a/front/sobremi.html
+++ b/front/sobremi.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./reset.css"> 
     <link rel="stylesheet" href="./estilos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> 
-    <title>CINEMA-Sobre mi</title>
+    <title>CINEMA-Sobre el creador </title>
 </head>
 <body> 
   
@@ -19,7 +19,10 @@
             </li>
             <li class="nav-item">
               <a class="nav-link navegacion" href="./historiadelcine.html">Historia del cine</a>
-            </li> 
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navegacion" href="./ingresatupeli.html">Ingresa tu peli</a>
+            </li>
           </ul>
         </article>
       </header>
