backend avanzado finalizado

--- a/front/ingresatupeli.html
+++ b/front/ingresatupeli.html
@@ -35,11 +35,7 @@
                     <input type="text" name="genPeli" id="generoImput" placeholder="genre" class="peliInput">
                     <input type="text" name="calPeli" id="calificacionImput" placeholder="rate" class="peliInput">
                     <input type="text" name="posPeli" id="posterImput" placeholder="poster" class="peliInput">
-                    <div class="submit">
-                        <input type="submit" value="Cargar peli" class="cargarPeli">
-                        <input type="submit" value="Limpiar" class="limpiarForm">
-                    </div>
-                    
+                    <input type="submit" value="Cargar peli" class="cargarPeli">
                 </form>
                     
             </section>
@@ -50,7 +46,9 @@
         </footer>
     </div>
 </body>
+
+<script src="./public/formulario.bundle.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script src="./scripts/limpiezaformulario.js"></script> 
+ 
 </html>
